--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "cb:create": "babel-node ./services/codebuild/createProject.js",
     "cb": "babel-node ./services/codebuild/index.js",
     "save:env": "babel-node ./services/contentful/createAndSaveKeys.js",
-    "iam": "babel-node ./services/iam/index.js"
+    "iam": "babel-node ./services/iam/index.js",
+    "test": "babel-node ./services/contentful/checkEntries.js",
+    "find": "babel-node ./services/contentful/findEntries.js"
   },
   "dependencies": {
     "@babel/cli": "^7.8.4",
