added dup array fields test

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cb": "babel-node ./services/codebuild/index.js",
     "save:env": "babel-node ./services/contentful/createAndSaveKeys.js",
     "iam": "babel-node ./services/iam/index.js",
-    "test": "node ./services/contentful/checkEntries.js",
+    "test:all": "node ./services/contentful/checkEntries.js",
+    "test": "node ./services/contentful/checkEntries.js -e sitefinityContentHtml sitefinityDescriptionHtml",
     "find": "node ./services/contentful/findEntries.js"
   },
   "dependencies": {
