--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cb": "babel-node ./services/codebuild/index.js",
     "contentful": "babel-node ./services/contentful/index.js",
     "save:env": "babel-node ./services/contentful/createAndSaveKeys.js",
+    "contentful:create": "babel-node ./services/contentful/createEntries.js",
     "iam": "babel-node ./services/iam/index.js",
     "test": "node ./services/contentful/checkEntries.js",
     "find": "node ./services/contentful/findEntries.js"
