--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "envfile": "^4.5.0",
     "fs": "^0.0.1-security",
     "inquirer": "^7.0.6",
+    "listr": "^0.14.3",
     "node-fetch": "^2.6.0",
     "path": "^0.12.7",
+    "rxjs": "^6.5.5",
     "yargs": "^15.1.0"
   },
   "babel": {
