--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^8.2.0",
     "envfile": "^4.5.0",
     "fs": "^0.0.1-security",
+    "html-entities": "^1.3.1",
     "inquirer": "^7.0.6",
     "listr": "^0.14.3",
     "node-fetch": "^2.6.0",
