--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "node ./services/contentful/checkEntries.js -e sitefinityContentHtml sitefinityDescriptionHtml",
     "find": "node ./services/contentful/findEntries.js",
     "wp": "node ./services/wordpress/migrate.js",
-    "wp:clean": "node ./services/wordpress/clean.js"
+    "wp:clean": "node ./services/wordpress/clean.js",
+    "export": "node ./services/wordpress/export.js"
   },
   "dependencies": {
     "@babel/cli": "^7.8.4",
