--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "contentful-import": "^7.7.0",
     "contentful-management": "^5.13.0",
     "core-js": "2",
+    "diff": "^4.0.2",
     "dotenv": "^8.2.0",
     "envfile": "^4.5.0",
     "fs": "^0.0.1-security",
